[package]
name = "allofmyfriends"
version = "0.1.0"
edition = "2021"

[dependencies]
const_format = "0.2.30"
libc = "0.2.144"
reqwest = { version = "0.11.18", features = ["blocking", "json", "native-tls", "native-tls-alpn"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
base64 = { git = "https://github.com/bridgeloop/base64.git", features = ["encode-ct"] }
dropfile = { git = "https://github.com/bridgeloop/dropfile.git" }
urlencoding = "2.1.2"
